v2.9.1 Whitespace fix for trackers

--- a/source/sass/tz-aio-style-2.scss
+++ b/source/sass/tz-aio-style-2.scss
@@ -355,7 +355,7 @@ $blinkto:   0.0;
 		background: $COPYAREABG;
 		textarea {
 			border: 0;
-			white-space: nowrap;
+			white-space: pre;
 			overflow: auto;
 			padding: 0;
 			color: $DARKGRAY;
